fix: header anchor links visible on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -100,16 +100,26 @@
     &::before {
       content: '#';
       position: absolute;
-      left: -1ch;
+      left: -1.5ch;
       top: 0;
-      line-height: 1;
+      /* line-height: 1; */
       opacity: 0;
+      color: var(--color-primary-500);
       text-decoration: underline;
+      transition: opacity 0.15s ease-in-out 0.3s;
     }
   }
 
   &:hover .icon-link::before {
     opacity: 1;
+    transition: opacity 0.15s ease-in-out;
+  }
+
+  @media (hover: none) {
+    .icon-link::before {
+      opacity: 1;
+      transition: none;
+    }
   }
 }
 
